# intervals-icu-cli

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  README.md  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
skills/intervals-icu-cli/: SKILL.md
src/intervals_icu_cli/: cli.py  client.py  config.py  mapper.py  models.py  workout_models.py
src/intervals_icu_cli/commands/: _helpers.py  activities.py  auth.py  events.py
tests/unit/: test_config.py  test_mapper.py  test_workout_models.py
